Updated resume name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>A passionate Frontend Developer, experienced in building web using HTML, CSS, and JAVASCRIPT</p>
             <div class="hero-buttons">
               <!--  <button class="hire-btn">Hire me</button> -->
-                <button class="down-cv"><a href="Roshan_resume.pdf" download>Resume here</a></button>
+                <button class="down-cv"><a href="Roshan_Resume.pdf" download>Resume here</a></button>
             </div>
         </div>
     </section>
