--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             </div>
         </nav>
         <div class="hero-text">
-            <h1>Hello, I'm ROSHAN VISHWAKARMA</h1>
-            <h2>I am a WEB DESIGNER & DEVELOPER</h2>
-            <p>A passionate Frontend Developer, experienced in building web using HTML, CSS, and JAVASCRIPT</p>
+            <h1>Hello,</br> I'm ROSHAN VISHWAKARMA</h1> </br>
+            <h2>WEB DESIGNER </br>&</br> DEVELOPER</h2></br>
+            <p>A passionate Frontend Developer, experienced in building web using </br> HTML, CSS, and JAVASCRIPT</p> </br>
             <div class="hero-buttons">
               <!--  <button class="hire-btn">Hire me</button> -->
-                <button class="down-cv"><a href="Roshan_Resume.pdf" download>Resume here</a></button>
+                <button class="down-cv">
+                <a href="Roshan_Resume.pdf" download>Resume here</a>
+                </button>
             </div>
         </div>
     </section>
