--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-links">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#social">Contact</a></li>
             </ul>
             <div class="burger">
@@ -27,7 +28,7 @@
             </div>
         </nav>
         <div class="hero-text">
-            <h1>Hello,</br> I'm ROSHAN VISHWAKARMA</h1> </br>
+            <h1>Hello,</br> I'm </br>ROSHAN VISHWAKARMA</h1> </br>
             <h2>WEB DESIGNER </br>&</br> DEVELOPER</h2></br>
             <p>A passionate Frontend Developer, experienced in building web using </br> HTML, CSS, and JAVASCRIPT</p> </br>
             <div class="hero-buttons">
@@ -44,19 +45,19 @@
         <div class="skill">
             <h3>HTML</h3>
             <div class="bar">
-                <div class="progress" style="--width: 100%;">100%</div>
+                <div class="progress" style="--width: 100%;"></div>
             </div>
         </div>
         <div class="skill">
             <h3>CSS</h3>
             <div class="bar">
-                <div class="progress" style="--width: 85%;">85%</div>
+                <div class="progress" style="--width: 85%;"></div>
             </div>
         </div>
         <div class="skill">
             <h3>JavaScript</h3>
             <div class="bar">
-                <div class="progress" style="--width: 70%;">70%</div>
+                <div class="progress" style="--width: 70%;"></div>
             </div>
         </div>
     </div>
@@ -77,6 +78,23 @@
            
         </div>
     </section>
+
+    <section class="education-section" id="education">
+        <h2>My Education</h2>
+        
+        <div class="education-entry">
+            <h3>Mumbai University</h3>
+            <p class="degree">Bachelor of Computer Engineering</p>
+            <p class="period">August 2022 - May 2025</p>
+            <p class="description">Currently Pursuing</p>
+        </div>
+        <div class="education-entry">
+            <h3>Maharashtra state board of Technical Education</h3>
+            <p class="degree">Diploma in Computer Engineering</p>
+            <p class="period">August 2019 - May 2022</p>
+            <p class="description">percentage : 85%</p>
+        </div>
+     </section>
 
   <!--  <div class="container" section id="contact">
  <form action="mailto:roshwork.in@gmail.com" method="post">
@@ -105,6 +123,7 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
                <a href="#"><i class="fab fa-youtube"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a> -->
+                <a href="https://www.linkedin.com/in/roshan-vishwakarma-025407291/" class="fa fa-linkedin"></a>
             </div>
 
             </br>
