--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <title> Portfolio</title>
 </head>
 <body>
@@ -30,7 +32,7 @@
         <div class="hero-text">
             <h1>Hello,</br> I'm </br>ROSHAN VISHWAKARMA</h1> </br>
             <h2>WEB DESIGNER </br>&</br> DEVELOPER</h2></br>
-            <p>A passionate Frontend Developer, experienced in building web using </br> HTML, CSS, and JAVASCRIPT</p> </br>
+            <p>A passionate Website Developer, experienced in building web using </br> HTML, CSS, and JAVASCRIPT</p> </br>
             <div class="hero-buttons">
               <!--  <button class="hire-btn">Hire me</button> -->
                 <button class="down-cv">
@@ -118,12 +120,12 @@
 
         <div class="social-container" >
             <div class="social-icons">
-              <!--   <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <!-- <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                <a href="#"><i class="fab fa-youtube"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a> -->
-                <a href="https://www.linkedin.com/in/roshan-vishwakarma-025407291/" class="fa fa-linkedin"></a>
+                <a href="https://www.linkedin.com/in/roshan-vishwakarma-025407291/" class="fa-brands fa-linkedin-in"> </a>
             </div>
 
             </br>
