--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         <div class="skills">
             <div class="skill">
                 <!-- <h3>HTML</h3> Heading for HTML -->
-                <img src="html-5.png" alt="HTML5 Logo"> <!-- Image for HTML -->
+                <img src="portfolio/html-5.png" alt="HTML5 Logo"> <!-- Image for HTML -->
             </div>
     
             <div class="skill">
                 <!-- <h3>CSS</h3> Heading for CSS -->
-                <img src="css-3.png" alt="CSS3 Logo"> <!-- Placeholder for CSS logo -->
+                <img src="portfolio/css-3.png" alt="CSS3 Logo"> <!-- Placeholder for CSS logo -->
             </div>
     
             <div class="skill">
                 <!-- <h3>JavaScript</h3> Heading for JavaScript -->
-                <img src="java-script.png" alt="JavaScript Logo"> <!-- Placeholder for JavaScript logo -->
+                <img src="portfolio/java-script.png" alt="JavaScript Logo"> <!-- Placeholder for JavaScript logo -->
             </div>
         </div>
     </section>
