--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </figure>
             <figure class="project-card" data-title="Kutiya" data-description="pet adoption application aimed to connect potential pet owners with pets available for adoption. It likely featured functionality such as browsing available pets, filtering by type, breed, age, and location, as well as providing detailed profiles for each pet with photos and adoption requirements. The app could have allowed users to submit adoption applications, track their adoption status, and even interact with shelters or other pet adoption agencies for more information. Let me know if you'd like to elaborate more on specific features! ">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMe-2B2cQl_GWvZCqYkZserEVx74DWJYXwTw&s" alt="Fitness based Web">
-                <figcaption ><a href="https://rosh-hub.github.io/KUTIYA/">Kutiya</a></figcaption>
+                <figcaption ><a href="https://rosh-hub.github.io/PET-ADOPTION-RESCUE-CENTRE/">Kutiya</a></figcaption>
                  <!-- Added Button -->
             </figure>
             
@@ -233,3 +233,4 @@ window.onclick = function(event) {
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
